--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <h1>CSS Examples</h1>
     <ul>
-      <li><a href="./CSS/box.html">CSS scaling</a></li>
+      <li><a href="./css/box.html">CSS scaling</a></li>
     </ul>
     <h1>JS Examples</h1>
      <ul>
