--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
     </ul>
     <h1>JS Examples</h1>
      <ul>
-      <li></li>
+      <li><a href="./js/js1.html">Changing inner contents with JS</a></li>
+      <li><a href="./js/js2.html">Changing HTML attributes with JS</a></li>
+      <li><a href="./js/js3.html">Changing styles with JS</a></li>
+      <li><a href="./js/js4.html">Modifying the DOM</a></li>
+      <li><a href="./js/js5.html">Modifying the DOM (issue with attempting to access DOM before DOM is built)</a></li>
+      <li><a href="./js/js5new.html">Modifying the DOM (with onload)</a></li>
+      <li><a href="./js/js6.html">Button actions with functions</a></li>
+      <li><a href="./js/js7.html">Using document.write after DOM is loaded</a></li>
+      <li><a href="./js/logandalert.html">Logging and alert</a></li>
     </ul>
   </body>
 </html>
