--- a/js/js2.html
+++ b/js/js2.html
@@ -23,7 +23,7 @@
 <img id="myImage" src="https://images.pexels.com/photos/287229/pexels-photo-287229.jpeg?h=350&auto=compress&cs=tinysrgb" style="width:200px">
 </figure>
 <p>this is some text</p>
-<button onclick="document.getElementById('myImage').src='https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Lil_Bub_2013_%28crop_for_thumb%29.jpg/1200px-Lil_Bub_2013_%28crop_for_thumb%29.jpg'">Show Image Two</button>
+<button onclick="document.getElementById('myImage').src='https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Lil-Bub-2013.jpg/320px-Lil-Bub-2013.jpg'">Show Image Two</button>
 
 </body>
 </html>
